# engine-lab

./: README.md  pyproject.toml
src/engine_lab/: cli.py
src/engine_lab/controllers/: __init__.py  base.py
src/engine_lab/controllers/ddpg/: ddpg_afr.py  vecnorm_lambda_finetuned_v1_4.pkl
src/engine_lab/controllers/ddpg/env/: mvem_2t.py
src/engine_lab/controllers/pid/: pid_afr.py
src/engine_lab/gui/: __init__.py  app.py  main_window.py
src/engine_lab/models/hirth3203/: __init__.py  mvem.py  params.py
src/engine_lab/scenarios/: run_ddpg_step_up.py  run_open_loop.py  run_pid_step_up.py
tests/: conftest.py  test_engine_init.py  test_engine_open_loop.py  test_engine_steady_state.py  test_params_basics.py
