[project]
name = "engine-lab"
version = "0.1.0"
description = "Control lab for engines"
authors = [
    {name = "AVNikolaenkov",email = "alexnikolaenkov001@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "gymnasium (>=1.2.2,<2.0.0)",
    "stable-baselines3 (>=2.7.1,<3.0.0)",
    "pyside6 (>=6.10.1,<7.0.0)",
    "pyqtgraph (>=0.14.0,<0.15.0)"
]

[tool.poetry]
packages = [
    { include = "engine_lab", from = "src" },
]

[tool.poetry.scripts]
engine-lab = "engine_lab.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.9,<0.15.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
